# lead-pages

./: .env.example  .gitignore  CLAUDE.md  README.md  firmen-beispiel.csv  generate-prompt.md  leads.csv  package-lock.json  package.json  parallel-build.sh  pyproject.toml  template.html
bernhard-conrad-steuerberater/: BROKEN-IMAGES-REPORT.md  IMAGE-AUTHENTICITY-REPORT.md  datenschutz.html  google-maps-report.md  impressum.html  index.html  kanzlei.html  leistungen.html  script.js  styles.css  team.html
birkle-steuerberater/: styles.css  team.html  ueber-uns.html
brett-rechtsanwaelte/: datenschutz.html  impressum.html  index.html  kontakt.html  philosophie.html  script.js  styles.css  team.html
deffner-kohler/: datenschutz.html  impressum.html  index.html  script.js  styles.css
dietmar-felchner/: datenschutz.html  impressum.html  index.html  kontakt.html  leistungen.html  script.js  styles.css  ueber-uns.html
generator/: __init__.py  batch.py  config.py  fix_loop.py  main.py  orchestrator.py  results.py
ghj-steuerberatung/: datenschutz.html  script.js
klaus-schaetzle-partner/: BROKEN-IMAGES-REPORT.md  LINK-CHECK-REPORT.md  LINK-CHECK-SUMMARY.md  google-maps-report.md  impressum.html  kontakt.html  leistungen.html  script.js  styles.css  team.html
kondor-steuerberatung/: kontakt.html  script.js
mayinger-steuerberater/: datenschutz.html
mildenberger-lusch-partner/: datenschutz.html  impressum.html  karriere.html  script.js  standorte.html  steuerberatung.html
nold-geiger/: datenschutz.html  impressum.html  index.html
schwer-margadant/: leistungen.html  (+1 more)
(+497 files in other folders)
