[project]
name = "lead-pages-generator"
version = "1.0.0"
description = "AI-powered unique website generator for leads using Claude Agent SDK"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.40.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
generate = "generator.main:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
